[package]
name = "json_schema"
version = "0.15.0"
authors = ["Leszek Zalewski <leszekzalewski@fastmail.fm>"]
edition = "2018"

[lib]
name = "json_schema"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.170"
jsonschema = "0.19.0"
serde_json = "1.0"

[replace]
"time:0.3.46" = { version = "0.3.45" }
"time-core:0.1.8" = { version = "0.1.7" }
"time-macros:0.2.26" = { version = "0.2.25" }
