[package]
name = "json_schema"
version = "0.15.0"
authors = ["Leszek Zalewski <leszekzalewski@fastmail.fm>"]
edition = "2018"

[lib]
name = "json_schema"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.170"
jsonschema = "0.19.0"
serde_json = "1.0"

[patch.crates-io]
time = { path = "vendor/time" }
time-core = { path = "vendor/time-core" }
time-macros = { path = "vendor/time-macros" }